# vasak-control-center

./: index.html  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  window.rs
src-tauri/src/commands/: audio.rs  bluetooth.rs  brightness.rs  mod.rs  network.rs  notifications.rs  theme.rs  user.rs
src/commons/: window.ts
src/components/: BluetoothControl.vue  BrightnessControl.vue  NetworkControl.vue  NotificationCenter.vue  NotificationItem.vue  ThemeToggle.vue  UserProfile.vue  VolumeControl.vue
