[package]
name = "vasak-control-center"
version = "0.1.0"
description = "A Vasak Application (template)"
authors = ["Vasak Group", "Joaquin (Pato) Decima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk = "0.18.1"
base64 = "0.21.1"
tauri-plugin-positioner = { version = "2", features = [] }
alsa = "0.7.0"
dbus = "0.9"
once_cell = "1.8"
tauri-plugin-vicons = { git = "https://github.com/Vasak-OS/tauri-plugin-vicons", branch = "v2" }
tauri-plugin-user-data = "2"
tauri-plugin-network-manager = "0.1"
tauri-plugin-config-manager = "2"
tauri-plugin-bluetooth-manager = { path = "../../tauri-plugin-bluetooth-manager"}

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
